package com.example.bloodpressuremvc.model

enum class PressureAssessment(val title: String) {
    LOW("пониженное"),
    NORMAL("норма"),
    HIGH("повышенное")
}
